Building Walls for room and made Unreal Generate code for Chair to be able to be interactive.

--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=BDAB9ADB4B479B5919D67EBB268449DC
+CompanyName=MerQ Squad
+CompanyDistinguishedName=MerQ Squad
+CopyrightNotice=Coryright 2018
+
